GNOME Bugzilla – Bug 723422
Fix g_socket_get_available() with TCP on Windows
Last modified: 2014-02-15 15:08:34 UTC
(Note that the changes here are general code logic, not anything Windows-specific, so this doesn't need a Windows-clueful reviewer.)
Created attachment 267786 [details] [review] Fix g_socket_get_available() with TCP on Windows Windows needs a special inefficient hack to implement g_socket_get_available() correctly for UDP sockets, but that hack isn't needed for TCP, and in fact, might give the wrong answer in that case. Fix it to only use the hack with UDP. Also, fix that case to handle non-blocking sockets as well. And add a test case for g_socket_get_available() with TCP.
Attachment 267786 [details] pushed as 074df39 - Fix g_socket_get_available() with TCP on Windows